--- a/src/app/assets/css/globals.css
+++ b/src/app/assets/css/globals.css
@@ -2774,6 +2774,13 @@ section {
   transition: 0.3s;
 }
 
+@media only screen and (max-width: 567px) {
+  .icon-image {
+    width: 25% !important;
+  }
+}
+
+
 .icon-image:hover {
   background-color: rgba(4, 50, 146, 0.5);
   color: #fff;
