--- a/src/app/assets/css/globals.css
+++ b/src/app/assets/css/globals.css
@@ -87,6 +87,13 @@ section {
   display: inline-block;
 }
 
+@media only screen and (max-width: 567px) {
+  .section-header h2:before,
+  .section-header h2:after {
+    display: none;
+  }
+}
+
 .section-header h2:before {
   margin: 0 15px 10px 0;
 }
@@ -2779,7 +2786,6 @@ section {
     width: 25% !important;
   }
 }
-
 
 .icon-image:hover {
   background-color: rgba(4, 50, 146, 0.5);
