--- a/src/app/assets/css/globals.css
+++ b/src/app/assets/css/globals.css
@@ -109,6 +109,10 @@ section {
   .hero .info .btn-get-started {
     font-size: 12px !important;
   }
+
+  .header-logo-img {
+    max-width: 10% !important;
+  }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 768px) {
@@ -304,9 +308,9 @@ section {
   box-shadow: 0px 0px 30px rgba(82, 86, 94, 0.1);
 }
 
-.header .logo img {
-  max-height: 40px;
-  margin-right: 6px;
+.header-logo-img {
+  object-fit: contain;
+  max-width: 5%;
 }
 
 .header .logo h1 {
