--- a/src/app/assets/css/globals.css
+++ b/src/app/assets/css/globals.css
@@ -1316,27 +1316,27 @@ section {
 /*--------------------------------------------------------------
 # Stats Counter Section
 --------------------------------------------------------------*/
-.stats-counter .stats-item {
+.overview-counter .overview-item {
   background: #fff;
   box-shadow: 0px 0 30px rgba(82, 86, 94, 0.05);
   padding: 30px;
 }
 
-.stats-counter .stats-item i {
+.overview-counter .overview-item i {
   font-size: 42px;
   line-height: 0;
   margin-right: 20px;
   color: var(--color-primary);
 }
 
-.stats-counter .stats-item span {
+.overview-counter .overview-item span {
   font-size: 36px;
   display: block;
   font-weight: 600;
   color: var(--color-secondary);
 }
 
-.stats-counter .stats-item p {
+.overview-counter .overview-item p {
   padding: 0;
   margin: 0;
   font-family: var(--font-primary);
@@ -2807,7 +2807,7 @@ section {
     display: none;
   }
 }
-.stats-counter {
+.overview-counter {
   padding-top: 20px !important;
   padding-bottom: 80px !important;
 }
